--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -47,6 +47,18 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Some of the commonly used libraries used by Data Scientists include:\n",
+        "1. Pandas\n",
+        "2. Tensorflow\n",
+        "3. Scikit-learn"
+      ],
+      "metadata": {
+        "id": "Z4JaSggcBJjm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "|Data Science Tools|\n",
         "|------------------|\n",
         "|Visual Studio Code|\n",
